# revar

./: .dockerignore  .gitignore  CHANGELOG.md  CONTRIBUTING.md  NOTICE  README.md  RELEASING.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  release.yml
adapters/stagehand/: bridge.mjs  package-lock.json  package.json
docs/: architecture.md  roadmap.md
examples/: run_browser_use.py  run_scripted.py  run_stagehand.py  run_vision_baseline.py
scripts/: bump_version.py  check_versions.py  extract_changelog.py
sites/shop_v1/: Dockerfile
sites/shop_v1/backend/: pyproject.toml
sites/shop_v1/backend/app/: auth.py  config.py  deps.py  main.py  modifiers.py
sites/shop_v1/backend/app/api/: account.py  auth.py  cart.py  catalog.py  checkout.py  health.py  test_endpoints.py
sites/shop_v1/backend/app/middleware/: __init__.py  latency.py  server_error.py
sites/shop_v1/frontend/: index.html  package.json  postcss.config.js  tailwind.config.ts  tsconfig.json  vite.config.ts
tasks/shop_v1/account/: request_return_for_existing_order.yaml
tasks/shop_v1/adversarial/: add_speaker_not_buy_now.yaml  coupon_in_cart_then_checkout.yaml
templates/adversarial_ui/: buy_now_vs_add_to_cart.scripted.py  buy_now_vs_add_to_cart.yaml.j2
templates/catalog/: find_product_by_name.scripted.py  find_product_by_name.yaml.j2
templates/checkout/: buy_with_coupon.scripted.py  buy_with_coupon.yaml.j2  out_of_stock_midflow.scripted.py  out_of_stock_midflow.yaml.j2  payment_declined_recovery.scripted.py  payment_declined_recovery.yaml.j2
(+33 files in other folders)
